err/mkbrutus.err
Listing '.'...
Listing './bin'...
Compiling './bin/mkbrutus.py'...
***   File "./bin/mkbrutus.py", line 46
    except exceptions.RouterOsApiCommunicationError, e:
                                                   ^
SyntaxError: invalid syntax

Listing './examples'...
Compiling './examples/ex1_percentage_indicator_stderr.py'...
Compiling './examples/ex1_percentage_indicator_stdout.py'...
Compiling './examples/ex1_progress_bar_stderr.py'...
Compiling './examples/ex1_progress_bar_stdout.py'...
Compiling './examples/ex2_percent_indicator_allargs.py'...
Compiling './examples/ex2_progressbar_allargs.py'...
Compiling './examples/ex3_percentage_indicator_monitor.py'...
Compiling './examples/ex3_progress_bar_monitor.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyPrind-2.9.3.egg-info'...
Listing './lib/python3.5/site-packages/RouterOS_api-0.13.egg-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/mkbrutus-1.0.2a1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyprind'...
Listing './lib/python3.5/site-packages/routeros_api'...
Listing './lib/python3.5/site-packages/routeros_api/api_communicator'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './share'...
Listing './share/python-wheels'...
